Footer: fix width and alignment

--- a/src/modules/footer/_footer.sass
+++ b/src/modules/footer/_footer.sass
@@ -6,7 +6,6 @@
 	display: flex
 	flex-direction: row
 	justify-content: space-between
-	align-items: center
 	width: 100%
 	padding-top: 100px
 	padding-bottom: 100px
@@ -17,18 +16,20 @@
 		flex-wrap: wrap
 
 	&__section
-		padding-bottom: 2rem
-		&-title
-			padding-bottom: 21px
-
-	&__list
 		width: 200px
-		display: flex
-		flex-direction: column
-		gap: 20px
-		color: $gray
-
+		padding-bottom: 2rem
+		flex-shrink: 1
 		&--wide
 			width: 300px
 			padding-right: 40px
 			color: $darkgray
+			flex-shrink: 0
+		&-title
+			padding-bottom: 21px
+
+	&__list
+		width: 100%
+		display: flex
+		flex-direction: column
+		gap: 20px
+		color: $gray
